@@ -9,11 +9,9 @@
    128-bit floating point, because the type is not enabled on those
    systems.  */
 #define LDOUBLE __ibm128
-#define IBM128_MAX ((__ibm128) 1.79769313486231580793728971405301199e+308L)
 
 #elif defined(__LONG_DOUBLE_IBM128__)
 #define LDOUBLE long double
-#define IBM128_MAX LDBL_MAX
 
 #else
 #error "long double must be either IBM 128-bit or IEEE 128-bit"
@@ -77,10 +75,10 @@ main (void)
   if (__builtin_isnormal (ld))
     __builtin_abort ();
 
-  ld = IBM128_MAX;
+  ld = LDBL_MAX;
   if (!__builtin_isnormal (ld))
     __builtin_abort ();
-  ld = -IBM128_MAX;
+  ld = -LDBL_MAX;
   if (!__builtin_isnormal (ld))
     __builtin_abort ();
 
